--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,24 +5,24 @@ on:
     branches: master
 
 jobs:
-  deploy1:
+  deploy_154:
 
-    runs-on: runner1
+    runs-on: runner_154
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Deploy to host1
+    - name: Deploy to host 154
       run: |
         cp * /home/crestron
 
-  deploy2:
+  deploy_1005:
 
-    runs-on: runner2
+    runs-on: runner_1005
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Deploy to host2
+    - name: Deploy to host 1005
       run: |
         cp * /home/crestron
